Card overflow was fixed

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -32,6 +32,7 @@
     height: 208px;
     object-fit: contain;
     object-position: center;
+    overflow: hidden;
 
     margin-bottom: 24px;
   }
